--- a/HotelBackend.WebApi/appsettings.json
+++ b/HotelBackend.WebApi/appsettings.json
@@ -5,8 +5,23 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+ 
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=HotelBackendDB;Username=postgres;Password=superuser123;"
+    "DefaultConnection": "",
+    "IdentityConnection": ""
+  },
+
+  "Jwt": {
+    "Expire": 15,
+    "RefreshTokenValidityInDays": 7
+  },
+
+  "EmailSenderSettings": {
+    "HotelBackendCompany": {
+      "SmtpServer": "smtp.gmail.com",
+      "Port": 587,
+      "DisplayName": "HotelBackend Support"
+    }
   }
 }
